--- a/client/src/components/PasswordGenerator.module.css
+++ b/client/src/components/PasswordGenerator.module.css
@@ -49,3 +49,10 @@
   cursor: pointer;
   font-size: 1rem;
 }
+
+.passwordDisplay button{
+    color:#333;
+    background-color: #f0f0f0;
+    border: none;
+    font-weight: 500;
+}
